--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "build": "tsdown && nuxt build",
+    "build": " nuxt build && tsdown  ",
     "build:watch": "tsdown --watch",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -20,8 +20,12 @@
     "dist"
   ],
   "dependencies": {
+    "cac": "^6.7.14",
     "chalk": "^5.6.2",
+    "h3": "2.0.1-rc.6",
+    "mrmime": "^2.0.1",
     "nuxt": "^4.2.2",
+    "pathe": "^2.0.3",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
