feat: 新增依赖图页面

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,11 @@
     {
       "path": "./tsconfig.cli.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./app/*"]
+    }
+  }
 }
