--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "dist"
   ],
   "dependencies": {
+    "@nuxt/icon": "2.1.1",
+    "@tailwindcss/vite": "^4.1.18",
     "cac": "^6.7.14",
     "chalk": "^5.6.2",
     "h3": "2.0.1-rc.6",
     "mrmime": "^2.0.1",
     "nuxt": "^4.2.2",
     "pathe": "^2.0.3",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
