--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "cac": "^6.7.14",
     "chalk": "^5.6.2",
+    "d3": "^7.9.0",
     "h3": "2.0.1-rc.6",
     "mrmime": "^2.0.1",
     "nuxt": "^4.2.2",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.3",
+    "@types/d3": "^7.4.3",
     "@types/node": "^25.0.3",
     "tsdown": "^0.18.3"
   }
