--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@tailwindcss/vite": "^4.1.18",
     "cac": "^6.7.14",
     "chalk": "^5.6.2",
-    "d3": "^7.9.0",
     "h3": "2.0.1-rc.6",
     "mrmime": "^2.0.1",
     "nuxt": "^4.2.2",
     "pathe": "^2.0.3",
+    "semver": "^7.7.3",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
@@ -37,6 +37,7 @@
     "@antfu/eslint-config": "^6.7.3",
     "@types/d3": "^7.4.3",
     "@types/node": "^25.0.3",
+    "@types/semver": "^7.7.1",
     "tsdown": "^0.18.3"
   }
 }
